[workspace]
resolver = "2"

members = [
    "symphonia",
    "symphonia-bundle-flac",
    "symphonia-bundle-mp3",
    "symphonia-codec-aac",
    "symphonia-codec-adpcm",
    "symphonia-codec-alac",
    "symphonia-codec-opus",
    "symphonia-codec-pcm",
    "symphonia-codec-vorbis",
    "symphonia-codec-wavpack",
    "symphonia-common",
    "symphonia-core",
    "symphonia-format-isomp4",
    "symphonia-format-mkv",
    "symphonia-format-ogg",
    "symphonia-format-riff",
    "symphonia-metadata",
    "symphonia-play",
    "symphonia-check",
]

# Common workspace attributes shared by all crates.
[workspace.package]
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
version = "0.5.4"
license = "MPL-2.0"
license-file = "LICENSE"
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "multimedia", "media"]
edition = "2021"
rust-version = "1.77"
