[workspace]
resolver = "2"

members = [
    "symphonia",
    "symphonia-bundle-flac",
    "symphonia-bundle-mp3",
    "symphonia-codec-aac",
    "symphonia-codec-adpcm",
    "symphonia-codec-alac",
    "symphonia-codec-opus",
    "symphonia-codec-pcm",
    "symphonia-codec-vorbis",
    "symphonia-codec-wavpack",
    "symphonia-common",
    "symphonia-core",
    "symphonia-format-isomp4",
    "symphonia-format-mkv",
    "symphonia-format-ogg",
    "symphonia-format-riff",
    "symphonia-metadata",
    "symphonia-play",
    "symphonia-check",
]

[workspace.package]
edition = "2024"
homepage = "https://github.com/pdeljanov/Symphonia"
license = "MPL-2.0"
license-file = "LICENSE"
repository = "https://github.com/pdeljanov/Symphonia"
rust-version = "1.93"
version = "0.6.0"

#cargo-features = ["profile-rustflags"]

[workspace.dependencies]
hashbrown = "0.16.1"

[profile.profiling]
inherits = "release"
debug = true
#rustflags = ["-C", "force-frame-pointers=y"]