[package]
name = "sonata-codec-flac"
version = "0.1.0"
description = "Pure Rust FLAC decoder."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["audio", "codec", "decoder", "flac"]

edition = "2018"

[dependencies]
md5 = "0.6.1"
sonata-core = { version="*", path = "../sonata-core" }
sonata-metadata = { version="*", path = "../sonata-metadata" }
sonata-utils-xiph = { version="*", path = "../sonata-utils-xiph" }