[package]
name = "sonata-codec-mp3"
version = "0.1.0"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["audio", "codec", "decoder", "mp3", "mp2", "mp1", "mpeg"]

[dependencies]
bitflags = "1.0.4"
lazy_static = "1.3.0"
sonata-core = { version="*", path = "../sonata-core" }
sonata-metadata = { version="*", path = "../sonata-metadata" }
