[package]
name = "sonata-core"
version = "0.1.0"
description = "Sonata shared structs, traits, and features."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["audio", "codec", "decoder", "encoder", "format"]

edition = "2018"

[dependencies]
bitflags = "1.0.4"
lazy_static = "1.3.0"
byteorder = "1.3.2"
