[package]
name = "sonata-core"
version = "0.1.0"
description = "Sonata shared structs, traits, and features."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["audio", "codec", "decoder", "encoder", "format"]

edition = "2018"

[dependencies]
arrayvec = "0.4.11"
bitflags = "1.0.4"
byteorder = "1.3.2"
