[package]
name = "sonata-format-ogg"
version = "0.1.0"
description = "Sonata OGG demuxer"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["audio", "format", "demuxer", "xiph"]

edition = "2018"

[dependencies]
sonata-core = { version="*", path = "../sonata-core" }
sonata-metadata = { version="*", path = "../sonata-metadata" }