[package]
name = "sonata-format-wav"
version = "0.1.0"
description = "Sonata WAV decoder"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "LGPL-2.1-only"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["audio", "codec", "decoder", "wav", "riff", "pcm"]

edition = "2018"

[dependencies]
sonata-core = { version="*", path = "../sonata-core" }