[package]
name = "sonata-metadata"
version = "0.1.0"
description = "Sonata media tag and metadata readers."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["media", "id3v1", "id3v2", "vorbis", "flac", "riff"]
edition = "2018"

[dependencies]
encoding_rs = "0.8.17"
lazy_static = "1.3.0"
sonata-core = { version="*", path = "../sonata-core" }