[package]
name = "sonata-play"
version = "0.1.0"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
sonata-core = { version="*", path = "../sonata-core" }
sonata-codec-flac = { version="*", path = "../sonata-codec-flac" }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"