[package]
name = "sonata-play"
version = "0.1.0"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
clap = "2.32.0"
sonata = { version="*", path = "../sonata" }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"