[package]
name = "sonata-play"
version = "0.1.0"
description = "Project Sonata audio player demo application."
homepage = "https://github.com/pdeljanov/Sonata"
repository = "https://github.com/pdeljanov/Sonata"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
clap = "2.32.0"
log = { version = "0.4", features = [ "release_max_level_info" ] }
pretty_env_logger = "0.4"
sonata = { version = "0.1", path = "../sonata", features = [ "mp3" ] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"