[package]
name = "sonata-utils-xiph"
version = "0.1.0"
description = "Project Sonata utilities for Xiph codecs and formats."
homepage = "https://github.com/pdeljanov/Sonata"
repository = "https://github.com/pdeljanov/Sonata"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["audio", "codec", "decoder", "encoder", "format"]
edition = "2018"

[dependencies]
sonata-core = { version = "0.1", path = "../sonata-core" }
sonata-metadata = { version = "0.1", path = "../sonata-metadata" }