[package]
name = "sonata"
version = "0.1.0"
description = "Pure Rust media container and audio codec library."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["audio", "codec", "decoder", "encoder", "format"]

edition = "2018"

[features]
default = ["wav", "flac", "pcm", "ogg"]
flac = ["sonata-codec-flac"]
mp3 = ["sonata-codec-mp3"]
pcm = ["sonata-codec-pcm"]
wav = ["sonata-format-wav"]
ogg = ["sonata-format-ogg"]

[dependencies]
lazy_static = "1.3.0"
sonata-core = { version="*", path = "../sonata-core" }
sonata-metadata = { version="*", path="../sonata-metadata" }
sonata-codec-flac = { version = "*", path = "../sonata-codec-flac", optional = true }
sonata-codec-mp3 = { version = "*", path = "../sonata-codec-mp3", optional = true }
sonata-codec-pcm = { version = "*", path = "../sonata-codec-pcm", optional = true }
sonata-format-wav = { version = "*", path = "../sonata-format-wav", optional = true }
sonata-format-ogg = { version = "*", path = "../sonata-format-ogg", optional = true }