[package]
name = "symphonia-bundle-mp3"
description = "Pure Rust MP1, MP2, and MP3 demuxer and decoder (a part of project Symphonia)."
keywords = ["audio", "codec", "decoder", "mp3", "mpeg"]
# Common package metadata is located in the root Cargo.toml.
authors.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["mp1", "mp2", "mp3"]
mp1 = []
mp2 = []
mp3 = []

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
symphonia-core = { version = "0.5.4", path = "../symphonia-core" }
symphonia-metadata = { version = "0.5.4", path = "../symphonia-metadata" }