[package]
name = "symphonia-check"
description = "Project Symphonia QA tool."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
publish = false
# Common package metadata located in workspace Cargo.toml.
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = "3.1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.4"
symphonia = { version = "0.6.0", path = "../symphonia", features = ["all", "opt-simd"] }