[package]
name = "symphonia-check"
description = "Project Symphonia QA tool."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
publish = false
# Common package metadata located in workspace Cargo.toml.
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
log = { workspace = true, features = ["release_max_level_info"] }
pretty_env_logger = "0.4"
symphonia = { version = "0.6.0-alpha.1", path = "../symphonia", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
