[package]
name = "symphonia-codec-aac"
description = "Pure Rust AAC decoder (a part of project Symphonia)."
keywords = ["audio", "codec", "decoder", "aac", "m4a"]
# Common package metadata is located in the root Cargo.toml.
authors.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
symphonia-core = { version = "0.5.4", path = "../symphonia-core" }