[package]
name = "symphonia-codec-aac"
description = "Pure Rust AAC decoder (a part of project Symphonia)."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>", "Kostya Shishkov <kostya.shiskov@gmail.com>"]
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "aac", "m4a"]
# Common package metadata located in workspace Cargo.toml.
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
log = "0.4"

symphonia-core = { version = "0.6.0", path = "../symphonia-core" }