[package]
name = "symphonia-codec-aac"
description = "Pure Rust AAC decoder (a part of project Symphonia)."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>", "Kostya Shishkov <kostya.shiskov@gmail.com>"]
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "aac", "m4a"]
# Common package metadata located in workspace Cargo.toml.
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
log = { workspace = true }
lazy_static = { workspace = true }
symphonia-core = { version = "0.6.0-alpha.1", path = "../symphonia-core" }
symphonia-common = { version = "0.6.0-alpha.1", path = "../symphonia-common" }
