[package]
name = "symphonia-codec-alac"
version = "0.4.0"
description = "Pure Rust ALAC decoder (a part of project Symphonia)."
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "alac"]
edition = "2018"

[dependencies]
log = "0.4"
symphonia-core = { version = "0.4", path = "../symphonia-core" }