[package]
name = "symphonia-codec-flac"
version = "0.1.0"
description = "Pure Rust FLAC demuxer and decoder (a part of project Symphonia)."
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "flac"]
edition = "2018"

[dependencies]
log = "0.4"
symphonia-core = { version = "0.1", path = "../symphonia-core" }
symphonia-metadata = { version = "0.1", path = "../symphonia-metadata" }
symphonia-utils-xiph = { version = "0.1", path = "../symphonia-utils-xiph" }