[package]
name = "symphonia-codec-mp3"
version = "0.1.0"
description = "Pure Rust MP1, MP2, and MP3 decoder (a part of project Symphonia)."
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "mp3", "mpeg"]
edition = "2018"

[dependencies]
log = "0.4"
bitflags = "1.0.4"
lazy_static = "1.3.0"
symphonia-core = { version = "0.1", path = "../symphonia-core" }
symphonia-metadata = { version = "0.1", path = "../symphonia-metadata" }
