[package]
name = "symphonia-codec-opus"
version = "0.0.1"
description = "Pure Opus decoder (a part of project Symphonia)."
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>", "Yevhen Bilyk, <jiztastamablastamarang@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "opus"]
edition = "2018"
rust-version = "1.53"

[dependencies]
log = "0.4"
symphonia-core = { version = "0.5.4", path = "../symphonia-core" }
once_cell = "1.19.0"

[lints.clippy]
needless_return = "allow"
enum_variant_names = "allow"