[package]
name = "symphonia-codec-opus"
version = "0.0.1"
description = "Pure Opus decoder (a part of project Symphonia)."
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>", "Yevhen Bilyk, <jiztastamablastamarang@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "opus"]
edition = "2021"
rust-version = "1.77"

[dependencies]
log = "0.4"
symphonia-core = { version = "0.5.4", path = "../symphonia-core" }
once_cell = "1.19.0"
lazy_static = "1.5.0"
env_logger = "0.11.5"
thiserror = "1"
itertools = "0.13"
anyhow = "1.0.89"
proptest = { version = "1", features = ["std", "attr-macro"] }

[lints.clippy]
needless_return = "allow"
enum_variant_names = "allow"
unused_imports = "allow"

[dev-dependencies]
serial_test = "3.1.1"
