[package]
name = "symphonia-codec-pcm"
description = "Pure Rust PCM audio decoder (a part of project Symphonia)."
keywords = ["audio", "codec", "decoder", "pcm"]
# Common package metadata is located in the root Cargo.toml.
authors.workspace = true
version.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4"
symphonia-core = { version = "0.5.4", path = "../symphonia-core" }