[package]
name = "symphonia-common"
description = "Project Symphonia utilities for codecs and formats."
keywords = ["audio", "multimedia", "media", "xiph"]
# Common package metadata is located in the root Cargo.toml.
authors.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
symphonia-core = { version = "0.5.4", path = "../symphonia-core" }
symphonia-metadata = { version = "0.5.4", path = "../symphonia-metadata" }