[package]
name = "symphonia-core"
description = "Project Symphonia shared structs, traits, and features."
keywords = ["audio", "codec", "decoder", "multimedia", "media"]
include = ["/src", "../LICENSE"]
# Common package metadata is located in the root Cargo.toml.
authors.workspace = true
version.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []

# SIMD support.
opt-simd-sse = ["rustfft/sse"]
opt-simd-avx = ["rustfft/avx"]
opt-simd-neon = ["rustfft/neon"]

# Enable all SIMD support.
opt-simd = [
    "opt-simd-sse",
    "opt-simd-avx",
    "opt-simd-neon",
]

[dependencies]
arrayvec = "0.7.1"
bitflags = "1.2.1"
bytemuck = "1.7"
lazy_static = "1.4.0"
log = "0.4"

[dependencies.rustfft]
version = "6.1.0"
optional = true
default-features = false