[package]
name = "symphonia-core"
description = "Project Symphonia shared structs, traits, and features."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "multimedia", "media"]
# Common package metadata located in workspace Cargo.toml.
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

std = ["embedded-io/std", "embedded-io-adapters/std"]
defmt = ["embedded-io/defmt"]

# SIMD support.
opt-simd-sse = ["rustfft/sse"]
opt-simd-avx = ["rustfft/avx"]
opt-simd-neon = ["rustfft/neon"]

# Enable all SIMD support.
opt-simd = [
    "opt-simd-sse",
    "opt-simd-avx",
    "opt-simd-neon",
]

# Experimental features.
exp-subtitle-codecs = []
exp-video-codecs = []

[dependencies]
bitflags = "2.4.2"
bytemuck = "1.7"
embedded-io = { version = "0.7.1", features = ["alloc"] }
embedded-io-adapters = "0.7.0"
hashbrown = { workspace = true }
lazy_static = "1.4.0"
log = "0.4"
num-complex = { version = "0.4", default-features = false }
smallvec = "1.13.1"

[dependencies.rustfft]
version = "6.1.0"
optional = true
default-features = false

[dev-dependencies.rand]
version = "0.9.2"
features = ["small_rng"]
default-features = false
